--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </section>
 
   <!-- Segundo Carousel -->
-  <section class="mb-5">
+  <!-- <section class="mb-5">
     <div id="carouselPromos" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -141,7 +141,7 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer id="contacto" class="bg-dark text-white text-center py-4">
