--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </footer>
 
   <!-- Botón flotante de WhatsApp -->
-  <a href="https://wa.me/qr/7VY6MQEXL2IAO1 " 
+  <a href="https://wa.me/qr/O7M4TRW7OMLBH1" 
      class="btn btn-success btn-lg rounded-circle shadow" 
      style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;" 
      target="_blank">
